# depth2room

./: .gitignore  PLAN.md  README.md  pyproject.toml
scripts/: benchmark_inference.py  benchmark_inference.sbatch  create_eval_split.py  eval_all_checkpoints.sh  eval_checkpoint.sbatch  fix_ref.sbatch  ngc-pytorch-nccl.toml  run_captioning.sh  train.sbatch  train_16node.sbatch  train_4node.sbatch  train_full.sh  train_lora.sh  viz_grid.sbatch
src/depth2room/: __init__.py
src/depth2room/data/: create_metadata.py  fix_ref_frames.py  generate_captions.py  prepare_data.py
src/depth2room/inference/: __init__.py  eval.py  infer_depth2rgb.py  infer_exr.py
src/depth2room/training/: dataset.py  logger.py  train.py  training_unit.py  viz_worker.py
src/depth2room/utils/: __init__.py  comparison.py  visualize.py
